syntax = "proto3";

message StartGame {
}