syntax = "proto3";

message TryAttack {
  string sourceUid = 1;
  string targetUid = 2;
}