syntax = "proto3";

message UpdateTiles {
  map<string,Tile> tiles = 1;
}

message Tile {
  int32 type = 1;
  int32 height = 2;
}